# tts-server

./: .gitignore  audio_utils.py  main.py  model_loader.py  models.py  pyproject.toml  requirements.txt  tts_queue.py
app/api/: routes.py
app/core/: connections.py  models.py  qwen_tts.py  text_normalize.py  tts_timing.py  ws_connection_manager.py
app/services/: audio.py  tts_queue.py
app/services/pipeline/: generator.py  pipeline.py  sender.py
scripts/: exctract_speaker.py
